// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a snapshot 1`] = `
<View
  accessibilityRole="banner"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F9F8F3",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="1"
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#1D1D1B",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 30,
        "fontWeight": "400",
        "lineHeight": 30,
      }
    }
  >
    
  </Text>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="2"
    ellipsizeMode="tail"
    style={
      Object {
        "fontFamily": "TimesDigitalW04-RegularSC",
      }
    }
  >
    
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#069",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 15,
      }
    }
  >
    
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333",
        "fontFamily": "TimesDigital-Regular",
        "fontSize": 15,
        "lineHeight": 25,
        "marginTop": 6,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "height": 50,
        "position": "relative",
        "width": 100,
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <Image
        onError={[Function]}
        source={
          Object {
            "uri": "",
          }
        }
        style={
          Array [
            Object {
              "backgroundColor": "#EFEFEF",
              "borderColor": "#FFF",
              "borderRadius": 50,
              "borderWidth": 5,
              "height": 100,
              "width": 100,
            },
            Object {
              "height": 0,
              "width": 0,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`renders a snapshot with data 1`] = `
<View
  accessibilityRole="banner"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F9F8F3",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="1"
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#1D1D1B",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 30,
        "fontWeight": "400",
        "lineHeight": 30,
      }
    }
  >
    Carol Midgley
  </Text>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="2"
    ellipsizeMode="tail"
    style={
      Object {
        "fontFamily": "TimesDigitalW04-RegularSC",
      }
    }
  >
    columnist
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#069",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 15,
      }
    }
  >
    @carolmidgley
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333",
        "fontFamily": "TimesDigital-Regular",
        "fontSize": 15,
        "lineHeight": 25,
        "marginTop": 6,
      }
    }
  >
    Carol Midgley joined The Times in 1996, and won feature writer of the year in 2004. Find her Wednesday column in Times2 each week and a weekly comment piece on Fridays.
  </Text>
  <View
    style={
      Object {
        "height": 50,
        "position": "relative",
        "width": 100,
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <Image
        onError={[Function]}
        source={
          Object {
            "uri": "https://feeds.thetimes.co.uk/web/imageserver/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0694e84e-04ff-11e7-976a-0b4b9a1a67a3.jpg?crop=854,854,214,0&resize=200",
          }
        }
        style={
          Array [
            Object {
              "backgroundColor": "#EFEFEF",
              "borderColor": "#FFF",
              "borderRadius": 50,
              "borderWidth": 5,
              "height": 100,
              "width": 100,
            },
            Object {
              "height": 0,
              "width": 0,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;
